--- a/katasJS2.html
+++ b/katasJS2.html
@@ -11,7 +11,7 @@
 
 <body>
     <main>
-        <h1 id="title-text" class="zoom"></h1>
+        <h1 id="titleText" class="zoom"></h1>
     </main>
 
     <script src="./katasJS2.js"></script>
