--- a/katasJS4.html
+++ b/katasJS4.html
@@ -11,7 +11,7 @@
 
 <body>
     <p>
-        <a href="#" id="onclick"><img alt="fusion" src="./images/initial.jpg" id="imgClickAndChange" /></a>
+        <div id="fusion" class="fusionOn"></div>
     </p>
 
     <script src="./katasJS4.js"></script>
